[API] Refactor Response.java and Error.java